--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -48,10 +48,45 @@
     <div class="col-xs-12">
       <% unless params[:action] == 'edit' %>
           <div id="nested-service-images">
-            <%= f.fields_for :service_images do |builder| %>
-                <%= render partial: 'application/service_image_fields', locals: { f: builder } %>
-            <%- end %>
-            <p id="nested-click"><%= link_to_add_fields "Add Service Image", f, :service_images %></p>
+            <%#= f.fields_for :service_images do |builder| %>
+                <%#= render partial: 'application/service_image_fields', locals: { f: builder } %>
+            <%#- end %>
+            <!--<p id="nested-click"><%#= link_to_add_fields "Add Service Image", f, :service_images %></p>-->
+            <span class="preview_img_con">
+  <%= f.file_field :image, accept:'image/*', class: 'preview_img_1', name: 'service[service_images_attributes][1478337999258][image]' %>
+              <div class="img_add">
+                <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+              </div>
+  <div id="target_1"></div>
+</span>
+            <span class="preview_img_con">
+              <%= f.file_field :image, accept:'image/*', class: 'preview_img_2', name: 'service[service_images_attributes][1478337999259][image]' %>
+              <div class="img_add">
+                <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+              </div>
+              <div id="target_2"></div>
+            </span>
+            <span class="preview_img_con">
+              <%= f.file_field :image, accept:'image/*', class: 'preview_img_3', name: 'service[service_images_attributes][1478337999260][image]' %>
+              <div class="img_add">
+                <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+              </div>
+              <div id="target_3"></div>
+            </span>
+            <span class="preview_img_con">
+              <%= f.file_field :image, accept:'image/*', class: 'preview_img_4', name: 'service[service_images_attributes][1478337999261][image]' %>
+              <div class="img_add">
+                <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+              </div>
+              <div id="target_4"></div>
+            </span>
+            <span class="preview_img_con">
+              <%= f.file_field :image, accept:'image/*', class: 'preview_img_5', name: 'service[service_images_attributes][1478337999262][image]' %>
+              <div class="img_add">
+                <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+              </div>
+              <div id="target_5"></div>
+            </span>
           </div>
       <% end %>
     </div>
@@ -131,7 +166,73 @@
                 this.remove();
             }
         });
-
+        $(function(){
+            $('.preview_img_1').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_1').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_2').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_2').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_3').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_3').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_4').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_4').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_5').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_5').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+        });
     });
 
 </script>
