--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -33,10 +33,45 @@
       <div class="field-con">
         <% unless params[:action] == 'edit' %>
             <div id="nested-product-images">
-              <%= f.fields_for :product_images do |builder| %>
-                  <%= render partial: 'application/product_image_fields', locals: { f: builder } %>
-              <%- end %>
-              <p id="nested-click"><%= link_to_add_fields "Add Product Image", f, :product_images %></p>
+              <%#= f.fields_for :product_images do |builder| %>
+                  <%#= render partial: 'application/product_image_fields', locals: { f: builder } %>
+              <%#- end %>
+              <!--<p id="nested-click"><%#= link_to_add_fields "Add Product Image", f, :product_images %></p>-->
+              <span class="preview_img_con">
+                <%= f.file_field :image, accept:'image/*', class: 'preview_img_1', name: 'product[product_images_attributes][1478336060035][image]' %>
+                <div class="img_add">
+                  <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+                </div>
+                <div id="target_1"></div>
+              </span>
+              <span class="preview_img_con">
+                <%= f.file_field :image, accept:'image/*', class: 'preview_img_2', name: 'product[product_images_attributes][1478336060036][image]' %>
+                <div class="img_add">
+                  <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+                </div>
+                <div id="target_2"></div>
+              </span>
+              <span class="preview_img_con">
+                <%= f.file_field :image, accept:'image/*', class: 'preview_img_3', name: 'product[product_images_attributes][1478336060037][image]' %>
+                <div class="img_add">
+                  <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+                </div>
+                <div id="target_3"></div>
+              </span>
+              <span class="preview_img_con">
+                <%= f.file_field :image, accept:'image/*', class: 'preview_img_4', name: 'product[product_images_attributes][1478336060038][image]' %>
+                <div class="img_add">
+                  <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+                </div>
+                <div id="target_4"></div>
+              </span>
+              <span class="preview_img_con">
+                <%= f.file_field :image, accept:'image/*', class: 'preview_img_5', name: 'product[product_images_attributes][1478336060039][image]' %>
+                <div class="img_add">
+                  <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+                </div>
+                <div id="target_5"></div>
+              </span>
             </div>
         <%end%>
       </div>
@@ -133,6 +168,73 @@
             if ($("#nested-product-images :input").length > 4){
                 this.remove();
             }
+        });
+        $(function(){
+            $('.preview_img_1').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_1').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_2').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_2').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_3').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_3').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_4').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_4').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
+            $('.preview_img_5').on('change', function(event) {
+                var files = event.target.files;
+                var image = files[0]
+                var reader = new FileReader();
+                reader.onload = function(file) {
+                    var img = new Image();
+                    console.log(file);
+                    img.src = file.target.result;
+                    $('#target_5').html(img);
+                }
+                reader.readAsDataURL(image);
+                console.log(files);
+            });
         });
     });
 
