--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -708,51 +708,7 @@ p.lead{
   }
   .img_add{
   }
-  #target_1{
-    width: 90px;
-    height: 80px;
-    position: absolute;
-    top: 1px;
-    left: 2px;
-    img{
-      width: 87px;
-      height: 74px;
-    }
-  }
-  #target_2{
-    width: 90px;
-    height: 80px;
-    position: absolute;
-    top: 1px;
-    left: 2px;
-    img{
-      width: 87px;
-      height: 74px;
-    }
-  }
-  #target_3{
-    width: 90px;
-    height: 80px;
-    position: absolute;
-    top: 1px;
-    left: 2px;
-    img{
-      width: 87px;
-      height: 74px;
-    }
-  }
-  #target_4{
-    width: 90px;
-    height: 80px;
-    position: absolute;
-    top: 1px;
-    left: 2px;
-    img{
-      width: 87px;
-      height: 74px;
-    }
-  }
-  #target_5{
+  .target{
     width: 90px;
     height: 80px;
     position: absolute;
