--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -42,35 +42,35 @@
                 <div class="img_add">
                   <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
                 </div>
-                <div id="target_1"></div>
+                <div id="target_1" class="target"></div>
               </span>
               <span class="preview_img_con">
                 <%= f.file_field :image, accept:'image/*', class: 'preview_img_2', name: 'product[product_images_attributes][1478336060036][image]' %>
                 <div class="img_add">
                   <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
                 </div>
-                <div id="target_2"></div>
+                <div id="target_2" class="target"></div>
               </span>
               <span class="preview_img_con">
                 <%= f.file_field :image, accept:'image/*', class: 'preview_img_3', name: 'product[product_images_attributes][1478336060037][image]' %>
                 <div class="img_add">
                   <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
                 </div>
-                <div id="target_3"></div>
+                <div id="target_3" class="target"></div>
               </span>
               <span class="preview_img_con">
                 <%= f.file_field :image, accept:'image/*', class: 'preview_img_4', name: 'product[product_images_attributes][1478336060038][image]' %>
                 <div class="img_add">
                   <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
                 </div>
-                <div id="target_4"></div>
+                <div id="target_4" class="target"></div>
               </span>
               <span class="preview_img_con">
                 <%= f.file_field :image, accept:'image/*', class: 'preview_img_5', name: 'product[product_images_attributes][1478336060039][image]' %>
                 <div class="img_add">
                   <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
                 </div>
-                <div id="target_5"></div>
+                <div id="target_5" class="target"></div>
               </span>
             </div>
         <%end%>
