--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -53,39 +53,39 @@
             <%#- end %>
             <!--<p id="nested-click"><%#= link_to_add_fields "Add Service Image", f, :service_images %></p>-->
             <span class="preview_img_con">
-  <%= f.file_field :image, accept:'image/*', class: 'preview_img_1', name: 'service[service_images_attributes][1478337999258][image]' %>
-              <div class="img_add">
-                <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
-              </div>
-  <div id="target_1"></div>
-</span>
+              <%= f.file_field :image, accept:'image/*', class: 'preview_img_1', name: 'service[service_images_attributes][1478337999258][image]' %>
+                          <div class="img_add">
+                            <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
+                          </div>
+              <div id="target_1" class="target"></div>
+            </span>
             <span class="preview_img_con">
               <%= f.file_field :image, accept:'image/*', class: 'preview_img_2', name: 'service[service_images_attributes][1478337999259][image]' %>
               <div class="img_add">
                 <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
               </div>
-              <div id="target_2"></div>
+              <div id="target_2" class="target"></div>
             </span>
             <span class="preview_img_con">
               <%= f.file_field :image, accept:'image/*', class: 'preview_img_3', name: 'service[service_images_attributes][1478337999260][image]' %>
               <div class="img_add">
                 <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
               </div>
-              <div id="target_3"></div>
+              <div id="target_3" class="target"></div>
             </span>
             <span class="preview_img_con">
               <%= f.file_field :image, accept:'image/*', class: 'preview_img_4', name: 'service[service_images_attributes][1478337999261][image]' %>
               <div class="img_add">
                 <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
               </div>
-              <div id="target_4"></div>
+              <div id="target_4" class="target"></div>
             </span>
             <span class="preview_img_con">
               <%= f.file_field :image, accept:'image/*', class: 'preview_img_5', name: 'service[service_images_attributes][1478337999262][image]' %>
               <div class="img_add">
                 <%= image_tag 'theme_img/img-preview.png', class: 'img-responsive' %>
               </div>
-              <div id="target_5"></div>
+              <div id="target_5" class="target"></div>
             </span>
           </div>
       <% end %>
