--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -10,25 +10,30 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="customer-main-show">
-          <% @blogs.each do |blog| %>
-              <a href="<%= blog_path(blog) %>">
-                <div class="white-bg">
-                  <div class="col-md-2 col-sm-3 col-xs-12 text-center">
-                    <div class="add-image-con">
-                      <% if blog.blog_images.any? %>
-                          <%= image_tag blog.blog_images.first.image(:size_500x500), class: 'img-responsive' %>
-                      <% else %>
-                          <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
-                      <% end %>
+          <% if @blogs.any? %>
+              <% @blogs.each do |blog| %>
+                  <a href="<%= blog_path(blog) %>">
+                    <div class="white-bg">
+                      <div class="col-md-2 col-sm-3 col-xs-12 text-center">
+                        <div class="add-image-con">
+                          <% if blog.blog_images.any? %>
+                              <%= image_tag blog.blog_images.first.image(:size_500x500), class: 'img-responsive' %>
+                          <% else %>
+                              <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                          <% end %>
+                        </div>
+                      </div>
+                      <div class="col-md-10 col-sm-9 col-xs-12">
+                        <h2 class="heading"><%= blog.heading %></h2>
+                        <p class="description limited_content"><%= blog.description %></p>
+                      </div>
+                      <div class="clearfix"></div>
                     </div>
-                  </div>
-                  <div class="col-md-10 col-sm-9 col-xs-12">
-                    <h2 class="heading"><%= blog.heading %></h2>
-                    <p class="description limited_content"><%= blog.description %></p>
-                  </div>
-                  <div class="clearfix"></div>
-                </div>
-              </a>
+                  </a>
+              <% end %>
+          <% else %>
+              <div class="gap"></div>
+              <h2 class="text-center">No Blog Available</h2>
           <% end %>
         </div>
       </div>
