--- a/app/views/customer/enquiries/index.html.erb
+++ b/app/views/customer/enquiries/index.html.erb
@@ -18,7 +18,11 @@
                             <div class="white-bg">
                               <div class="col-md-2 col-sm-3 col-xs-12 text-center">
                                 <div class="add-image-con">
-                                  <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                                  <% if (customer_enquiry.product && customer_enquiry.product.product_images.any?) %>
+                                  <%= image_tag customer_enquiry.product.product_images.first.image.url(ProductImage::DEFAULT_SIZE), class: 'img-responsive' %>
+                                  <% else %>
+                                   <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                                  <% end %>
                                 </div>
                               </div>
                               <div class="col-md-10 col-sm-9 col-xs-12">
@@ -45,7 +49,11 @@
                             <div class="white-bg">
                               <div class="col-md-2 col-sm-3 col-xs-12 text-center">
                                 <div class="add-image-con">
-                                  <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                                  <% if (customer_enquiry.product && customer_enquiry.product.product_images.any?) %>
+                                  <%= image_tag customer_enquiry.product.product_images.first.image.url(ProductImage::DEFAULT_SIZE), class: 'img-responsive' %>
+                                  <% else %>
+                                   <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                                  <% end %>
                                 </div>
                               </div>
                               <div class="col-md-10 col-sm-9 col-xs-12">
@@ -71,7 +79,11 @@
                             <div class="white-bg">
                               <div class="col-md-2 col-sm-3 col-xs-12 text-center">
                                 <div class="add-image-con">
-                                  <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                                  <% if (customer_enquiry.product && customer_enquiry.product.product_images.any?) %>
+                                  <%= image_tag customer_enquiry.product.product_images.first.image.url(ProductImage::DEFAULT_SIZE), class: 'img-responsive' %>
+                                  <% else %>
+                                   <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                                  <% end %>
                                 </div>
                               </div>
                               <div class="col-md-10 col-sm-9 col-xs-12">
