--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -31,6 +31,8 @@
     </div>
     <div class="col-xs-12">
       <div class="field-con">
+        <label class="label" data-toggle="popover" data-placement="right" title="Please upload images of 500*500 with white background for better demonstration of your products/services">Add Images ⓘ</label>
+        <div class="clearfix" style="height: 15px;"></div>
         <% unless params[:action] == 'edit' %>
             <div id="nested-product-images">
               <%#= f.fields_for :product_images do |builder| %>
