--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <header class="page-header">
-    <h1 class="page-title"><%= @service.name %></h1>
+    <h1 class="page-title"><%#= @service.name %></h1>
     <ol class="breadcrumb page-breadcrumb">
       <li><a href="<%= category_path(@service.subcategory.category)%>"><%= @service.subcategory.category.name %></a></li>
       <li><a href="<%= subcategory_path(@service.subcategory)%>"><%= @service.subcategory.name %></a></li>
