--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -26,7 +26,9 @@
                       <div class="col-md-10 col-sm-9 col-xs-12">
                         <h2 class="heading"><%= blog.heading %></h2>
                         <p class="description limited_content"><%= blog.description %></p>
+                        <p class="description time_blog"><%= blog.created_at.strftime("%d/%m/%Y %I:%M %p") %></p>
                       </div>
+                      <a class="read_more_text" href="<%= blog_path(blog) %>">Read More</a>
                       <div class="clearfix"></div>
                     </div>
                   </a>
