--- a/app/views/customer/enquiries/show.html.erb
+++ b/app/views/customer/enquiries/show.html.erb
@@ -169,7 +169,7 @@
                               <%= f.input :expected_per_month_price, label: 'Expected Per Month Price:', label_html: {class: 'heading'} %>
                             </div>
                             <div class="col-xs-12">
-                              <%= f.input :description, label: 'Description:', label_html: {class: 'heading', maxlength: '100'} %>
+                              <%= f.input :description, label: 'Description:', label_html: {class: 'heading'}, input_html: {maxlength: '100'} %>
                             </div>
                             <div class="col-xs-12">
                               <%= f.submit 'Send quote', class: 'btn btn-primary'%>
